--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -231,7 +231,7 @@
 			<div id="iframe_box" class="Hui-article">
 				<div class="show_iframe">
 					<div style="display:none" class="loading"></div>
-					<iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>
+					<iframe scrolling="yes" frameborder="0" src=" "></iframe>
 				</div>
 			</div>
 		</section>
