--- a/代码类/WEB管理端前端/教务管理端/www/live_room.html
+++ b/代码类/WEB管理端前端/教务管理端/www/live_room.html
@@ -47,6 +47,137 @@
 						title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325002</td>
+					<td>张三</td>
+					<td>大学物理的深入了解</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325003</td>
+					<td>张三</td>
+					<td>高等数学</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325004</td>
+					<td>李敏</td>
+					<td>大学英语2</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325005</td>
+					<td>苏六</td>
+					<td>C语言程序设计</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325006</td>
+					<td>苏六</td>
+					<td>C++程序设计</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325007</td>
+					<td>苏六</td>
+					<td>H5的移动开发</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325008</td>
+					<td>苏六</td>
+					<td>数据库基础</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325009</td>
+					<td>苏六</td>
+					<td>编译原理</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325010</td>
+					<td>张三</td>
+					<td>离散数学</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>10325011</td>
+					<td>张三</td>
+					<td>工程数学</td>
+					<td>进行中</td>
+					<td><img src="img/logo2.png"></td>
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
