--- a/代码类/WEB管理端前端/教务管理端/www/grade.html
+++ b/代码类/WEB管理端前端/教务管理端/www/grade.html
@@ -55,6 +55,115 @@
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>张四</td>
+					<td>高等数学</td>
+					<td>95</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>刘亿</td>
+					<td>大学物理入门</td>
+					<td>90</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>马思</td>
+					<td>高等数学</td>
+					<td>85</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>端木度</td>
+					<td>C语言程序设计</td>
+					<td>80</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>林冲</td>
+					<td>C语言程序设计</td>
+					<td>80</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>晁盖</td>
+					<td>大学物理入门</td>
+					<td>80</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>马岱</td>
+					<td>大学物理入门</td>
+					<td>70</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>诸葛瑾</td>
+					<td>大学物理入门</td>
+					<td>100</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>诸葛均</td>
+					<td>大学物理入门</td>
+					<td>100</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>刘璋</td>
+					<td>高等数学</td>
+					<td>95</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>刘封</td>
+					<td>大学物理入门</td>
+					<td>76</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>孙坚</td>
+					<td>大学物理入门</td>
+					<td>70</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
 			</tbody>
 		</table>
 	</div>
