--- a/代码类/WEB管理端前端/教务管理端/www/school-notice.html
+++ b/代码类/WEB管理端前端/教务管理端/www/school-notice.html
@@ -49,7 +49,7 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>大学</td>
+					<td>大学A</td>
 					<td>学校即将开设相关课程</td>
 					<td>学校将于近日开设一门新课程，希望同学们踊跃报名参加</td>
 					<td>是</td>
@@ -59,6 +59,139 @@
 						title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学B</td>
+					<td>学校将针对特定的课程进行整改</td>
+					<td>学校将于近日修改一门课程的相关信息，希望同学们踊跃报名参加</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学B</td>
+					<td>学校开始进行实训</td>
+					<td>学校将于近日开始本学期的实训课程</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学C</td>
+					<td>学校即将开始测试</td>
+					<td>学校将于近日确定测试时间，进行一次测试</td>
+					<td>否</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学C</td>
+					<td>学校即将开设相关课程</td>
+					<td>学校将于近日开设一门新课程，希望同学们踊跃报名参加</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学D</td>
+					<td>学校即将关闭选课</td>
+					<td>学校将于周六中午关闭选课系统，停止选课</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学D</td>
+					<td>学校即将开设相关课程</td>
+					<td>学校将于近日开设一门新课程，希望同学们踊跃报名参加</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学D</td>
+					<td>学校将对同学进行奖励</td>
+					<td>学校将于近日对本学期表现好的同学进行奖励</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学F</td>
+					<td>学校即将开设相关课程</td>
+					<td>学校将于近日开设一门新课程，希望同学们踊跃报名参加</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学F</td>
+					<td>笔试</td>
+					<td>学校决定将于周五进行学科笔试。</td>
+					<td>是</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学G</td>
+					<td>学校即将开设相关课程</td>
+					<td>学校将于近日开设一门新课程，希望同学们踊跃报名参加</td>
+					<td>否</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学G</td>
+					<td>上机测试</td>
+					<td>将于本周周日进行上机</td>
+					<td>否</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
 			</tbody>
 		</table>
 	</div>
