--- a/代码类/WEB管理端前端/教务管理端/www/sensitive_word.html
+++ b/代码类/WEB管理端前端/教务管理端/www/sensitive_word.html
@@ -47,13 +47,124 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>大学</td>
+					<td>大学A</td>
 					<td>AA</td>
 					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
 					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学B</td>
+					<td>BB</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学C</td>
+					<td>CC</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学D</td>
+					<td>DD</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学E</td>
+					<td>EE</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学F</td>
+					<td>FF</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学G</td>
+					<td>Gv</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学H</td>
+					<td>GF</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学I</td>
+					<td>SD</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学J</td>
+					<td>AS</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学K</td>
+					<td>ACD</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+<tr class="text-c">
+					<td><input type="checkbox" value="" name=""></td>
+					<td>大学L</td>
+					<td>SA</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
 			</tbody>
 		</table>
 	</div>
